tests/ui/rfcs/rfc-2396-target_feature-11/trait-impl.stderr
error: `#[target_feature(..)]` cannot be applied to safe trait method
  --> $DIR/trait-impl.rs:11:5
   |
LL |     #[target_feature(enable = "sse2")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot be applied to safe trait method
LL |
LL |     fn foo(&self) {}
   |     ------------- not an `unsafe` function

error: aborting due to previous error

